Updates to classNotes 3

--- a/classNotes/3-functions/3-functions.Rmd
+++ b/classNotes/3-functions/3-functions.Rmd
@@ -8,25 +8,6 @@ output:
     css: classNotes.css
 ---
 
-# Announcements
-
-### 1. Download slack app 
-
---
-### 2. HW1 solutions will be posted Tues. @ 8:01pm.
-
----
-# Announcements
-
-### 3. Thanks for the animals Kaitlin, Jenny, Gabriel, William, Emily, Bruna, Alp, & Olivia!
-
-| | | |
-|-|-|-|
-|<img src="images/Kaitlin_Fagan_Panda.gif" height="150"> | <img src="images/Jenny_Kim_Hampster.gif" height="150"> |  <img src="images/Olivia_O_Hearn_Penguin.gif" height="150"> |
-|<img src="images/Gabriel_Bahia_de_Sousa_Otter.gif" height="150"> | <img src="images/Emily_Aprigliano_Koala.gif" height="150">| <img src="images/Bruna_Stamer_Janikian_Panda.jpg" height="150">|
-|<img src="images/Alp_Can_Eryorulmaz_Chick.gif" height="150"> | | |
-
----
 # Quiz 1
 
 ### [20 minutes](https://www.youtube.com/watch?v=kxGWsHYITAw)
@@ -37,6 +18,25 @@ output:
 - ### No computers
 - ### No phones
 - ### No strings or loops
+
+---
+# Announcements
+
+### 1. If you haven't already, download the slack app 
+
+--
+### 2. HW1 solutions will be posted Tues. @ 8:01pm.
+
+---
+# Announcements
+
+### 3. Thanks for the animals Kaitlin, Jenny, Gabriel, William, Emily, Bruna, Alp, Alexa R., & Olivia!
+
+| | | |
+|-|-|-|
+|<img src="images/Kaitlin_Fagan_Panda.gif" height="150"> | <img src="images/Jenny_Kim_Hampster.gif" height="150"> |  <img src="images/Olivia_O_Hearn_Penguin.gif" height="150"> |
+|<img src="images/Gabriel_Bahia_de_Sousa_Otter.gif" height="150"> | <img src="images/Emily_Aprigliano_Koala.gif" height="150">| <img src="images/Bruna_Stamer_Janikian_Panda.jpg" height="150">|
+|<img src="images/Alp_Can_Eryorulmaz_Chick.gif" height="150"> | <img src="images/Alexa_Rosdahl_Otter.png" height="150"> | |
 
 ---
 # Make a class notes project
@@ -150,7 +150,8 @@ printX(7)
 --
 ```{r}
 printXSquared <- function(x) {
-  cat("The value of x^2 is", x^2)
+  y <- x^2
+  cat("The value of x^2 is", y)
 }
 ```
 --
@@ -291,13 +292,25 @@ f4(2)
 
 ### All objects inside function are **local**.
 
-### If you call a local object in the global environment, you'll get an error:
+### If you call a local object in the global environment, you'll get an error.
 
-```{r error=TRUE}
+--
+### Example:
+
+```{r}
 squareOfX <- function(x) {
   y <- x^2
   return(y)
 }
+```
+
+--
+```{r}
+squareOfX(3)
+```
+
+--
+```{r, error=TRUE}
 y
 ```
 
@@ -386,7 +399,6 @@ hypotenuse(3, 4)
 - tensDigit(23) == 2
 - tensDigit(1) == 0
 - tensDigit(-7890) == 9
-- tensDigit(-11) == 1
 ]
 
 ---
