--- a/hw2-functions.Rmd
+++ b/hw2-functions.Rmd
@@ -57,7 +57,7 @@ Hint: there are (at least) two good ways to write this. One way involves a simpl
 
 ### 4) `distance(x1, y1, x2, y2)` [COLLABORATIVE, 10 pts]
 
-Given four numeric values representing the points `(x1, y1)` and `(x2, y2)`, write the function `distance(x1, y1, x2, y2)` returns the Euclidean distance between those points.
+Given four numeric values representing the points `(x1, y1)` and `(x2, y2)`, write the function `distance(x1, y1, x2, y2)` returns the [Euclidean distance](https://en.wikipedia.org/wiki/Euclidean_distance) between those points.
 
 ### 5) `isRightTriangle(x1, y1, x2, y2, x3, y3)` [COLLABORATIVE, 10 pts]
 
@@ -71,19 +71,19 @@ Given six numeric values representing the points `(x1, y1)`, `(x2, y2)`, and `(x
 
 ![](images/poolballs.jpg){ width=150 }
 
-Pool balls are arranged in rows where the first row contains 1 pool ball and each row contains 1 more pool ball than the previous row. Thus, for example, 3 rows contain 6 total pool balls (1+2+3). With this in mind, write the function numberOfPoolBalls(rows) that takes a non-negative integer value, the number of rows, and returns another int value, the number of pool balls in that number of full rows. For example, `numberOfPoolBalls(3)` returns `6`. We will not limit our analysis to a "rack" of 15 balls; rather, our pool table can contain an unlimited number of rows. Do not use loops. Hint: For this problem you should research [Triangular Numbers](https://en.wikipedia.org/wiki/Triangular_number).
+Pool balls are arranged in rows where the first row contains 1 pool ball and each row contains 1 more pool ball than the previous row. Thus, for example, 3 rows contain 6 total pool balls (1+2+3). With this in mind, write the function `numberOfPoolBalls(rows)` that takes a non-negative integer value (the number of rows) and returns another integer value (the number of pool balls in that number of full rows). For example, `numberOfPoolBalls(3)` returns `6`. We will not limit our analysis to a "rack" of 15 balls; rather, our pool table can contain an unlimited number of rows. Do not use loops. Hint: For this problem you should research [Triangular Numbers](https://en.wikipedia.org/wiki/Triangular_number).
 
 ### 8) `isEvenPositiveInt(x)` [COLLABORATIVE, 15 pts]
 
-Given an arbitrary value `x`, return `TRUE` if it is an integer, and it is positive, and it is even (all 3 must be true), or `FALSE` otherwise. Do not crash if the value is not an integer. So, `isEvenPositiveInt("yikes!")` returns `FALSE` (rather than crashing), and `isEvenPositiveInt(123456)` returns `TRUE`. For this problem, consider integer _values_ to be "integers". So, both `3` and `3L` are to be considered integers, even though R will return `FALSE` if you type `is.integer(3)` since `3` is technically a double.
+Given an arbitrary value `x`, return `TRUE` if it is an integer, and it is positive, and it is even (all 3 must be true), or `FALSE` otherwise. If the value `x` is not an integer, the function should return `FALSE` rather than error. So, `isEvenPositiveInt("yikes!")` returns `FALSE`, and `isEvenPositiveInt(123456)` returns `TRUE`. For this problem, consider integer _values_ to be "integers". So, both `3` and `3L` are to be considered integers, even though R will return `FALSE` if you type `is.integer(3)`, since `3` is technically a "double". **Hint**: Read the [Programming Basics Tips](L2-programming-basics.html#tips).
 
 ### 9) `getTheCents(n)` [COLLABORATIVE, 15 pts]
 
-Write the function `getTheCents(n)` which takes a value `n` (which represents a payment in US dollars) and returns the number of cents in the payment. For example, if n is 2.45, the function should return 45. If n is an integer, the function should return 0, as it has 0 cents; if it isn't a number, it should return `NULL`, because a non-number payment make no cents (ha!). If the payment has partial cents (for example, 3.953), it should be rounded to the nearest cent (in this example, 95 cents).
+Write the function `getTheCents(n)` which takes a value `n` that represents a payment in US dollars and returns the number of cents in the payment. For example, if `n` is `2.45`, the function should return `45`. If `n` is an integer, the function should return `0`, as it has `0` cents; if it isn't a number, it should return `NULL`, because a non-number payment make no cents (ha!). If the payment has partial cents (for example, `3.953`), it should be rounded to the nearest cent (in this case, `95` cents).
 
 ### 10) `turtleSquare(s)` [COLLABORATIVE, 15 pts]
 
-Write the function `turtleSquare(s)` which uses the `TurtleGraphics` library to draw a square with side length `s < 100`. The square should be centered in the turtle's terrarium. **Note**: Do not put the `turtle_init()` command inside your function - the turtle must be "initialized" inside the terrarium before calling your `turtleSquare(s)` function. For example, the code below produces a square with side length of 50:
+Write the function `turtleSquare(s)` which uses the `TurtleGraphics` library to draw a square with side length `s < 100` (because the turtle will "escape" the terrarium when `s >= 100`). The square should be centered in the turtle's terrarium. **Note**: Do not put the `turtle_init()` command inside your function - the turtle must be "initialized" inside the terrarium before calling your `turtleSquare(s)` function. You should call your `turtleSquare(s)` function inside the `turtle_do({})` call as described in the [TurtleGraphics lesson](TurtleGraphics.html). For example, the code below produces a square with side length of 50:
 
 ```{r, eval=FALSE}
 library(TurtleGraphics)
