Changed language in turtleSquareaStar in hw3

--- a/hw3-loops-vectors.Rmd
+++ b/hw3-loops-vectors.Rmd
@@ -139,7 +139,7 @@ turtle_do({
 
 ### Bonus Credit 2) `turtleSquareStar(s, degreeSpacing = 20)` [SOLO, 5 pts]
 
-Write the function `turtleSquareStar(s, degreeSpacing)` that uses the `TurtleGraphics` library to draw a sequence of overlapping rotated squares with side length `s < 70` to form a star. The `degreeSpacing` argument determines the spacing in degrees between each rotated square, and the default value should be `degreeSpacing = 20`. Also, `spacing >= 1`, and your function must not allow the turtle to escape the terrarium. Hint: you may want to use `turtleSquareRotated(s, degrees)` as a helper function. The following code should produce the star of rotated squares with a side length of 50 and 20 degree spacings between each square:
+Write the function `turtleSquareStar(s, degreeSpacing)` that uses the `turtleSquareRotated(s, degrees)` as a helper function to draw a sequence of overlapping rotated squares with side length `s < 70` to form a star. The `degreeSpacing` argument determines the spacing in degrees between each rotated square, and the default value should be `degreeSpacing = 20`. Also, `1 <= degreeSpacing <= 60`, and your function must not allow the turtle to escape the terrarium. The following code should produce the star of rotated squares with a side length of 50 and 20 degree spacings between each square:
 
 ```{r, eval=FALSE}
 library(TurtleGraphics)
